--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
         "postcss": "^8.5.3",
         "react": "^19.0.0",
         "react-day-picker": "^8.10.1",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.55.0",
         "react-resizable-panels": "^2.1.7",
