feat: add Bull Board monitoring server and Redis queue worker
- Added a standalone Express server for Bull Board dashboard in `scripts/monitoring-server.mjs`.
- Implemented Redis queue worker startup script in `scripts/start-worker.ts`.
- Created a Redis connection test script in `test-redis-connection.js`.
- Defined queue message types and structures in `types/queue-types.ts`.
- Updated `package.json` to include new scripts and dependencies for Bull Board and BullMQ.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,12 +10,15 @@ services:
         environment:
             - NODE_ENV=development
             - DATABASE_URL=postgresql://postgres:postgres@db:5432/movement-db
+            - REDIS_HOST=redis
+            - REDIS_PORT=6379
             # Add other environment variables as needed from .env.local
         volumes:
             - .:/app
             - /app/node_modules
         depends_on:
             - db
+            - redis
         restart: unless-stopped
         command: npm run dev
 
@@ -32,6 +35,17 @@ services:
         restart: unless-stopped
         healthcheck:
             test: ["CMD-SHELL", "pg_isready -U postgres"]
+            interval: 10s
+            timeout: 5s
+            retries: 5
+
+    redis:
+        image: redis:7-alpine
+        ports:
+            - "6379:6379"
+        restart: unless-stopped
+        healthcheck:
+            test: ["CMD", "redis-cli", "ping"]
             interval: 10s
             timeout: 5s
             retries: 5
