--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,15 @@ services:
         environment:
             - NODE_ENV=production
             - DATABASE_URL=postgresql://postgres:postgres@db:5432/movement-db
+            - REDIS_HOST=redis
+            - REDIS_PORT=6379
             # Add other environment variables as needed
             # - NEXT_PUBLIC_PROJECT_ID=${NEXT_PUBLIC_PROJECT_ID}
             # - NEXT_PUBLIC_APPWRITE_ENDPOINT=${NEXT_PUBLIC_APPWRITE_ENDPOINT}
             # - TOGETHER_API_KEY=${TOGETHER_API_KEY}
         depends_on:
             - db
+            - redis
         restart: unless-stopped
         healthcheck:
             test:
@@ -45,6 +48,17 @@ services:
         restart: unless-stopped
         healthcheck:
             test: ["CMD-SHELL", "pg_isready -U postgres"]
+            interval: 10s
+            timeout: 5s
+            retries: 5
+
+    redis:
+        image: redis:7-alpine
+        ports:
+            - "6379:6379"
+        restart: unless-stopped
+        healthcheck:
+            test: ["CMD", "redis-cli", "ping"]
             interval: 10s
             timeout: 5s
             retries: 5
