--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
         "lint": "next lint",
         "drizzle:generate": "drizzle-kit generate",
         "drizzle:migrate": "drizzle-kit migrate",
-        "drizzle:drop": "drizzle-kit drop"
+        "drizzle:drop": "drizzle-kit drop",
+        "worker": "tsx scripts/start-worker.ts",
+        "monitor": "node scripts/monitoring-server.mjs",
+        "dev:full": "concurrently \"npm run dev\" \"npm run worker\" \"npm run monitor\""
     },
     "dependencies": {
+        "@bull-board/express": "^6.9.6",
+        "@bull-board/ui": "^6.9.6",
         "@hookform/resolvers": "^5.0.1",
         "@radix-ui/react-accordion": "^1.2.4",
         "@radix-ui/react-alert-dialog": "^1.1.7",
@@ -46,6 +51,7 @@
         "@types/uuid": "^10.0.0",
         "@xata.io/client": "^0.0.0-next.v93343b9646f57a1e5c51c35eccf0767c2bb80baa",
         "appwrite": "^17.0.1",
+        "bullmq": "^5.53.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
@@ -53,6 +59,7 @@
         "dotenv": "^16.5.0",
         "drizzle-orm": "^0.41.0",
         "embla-carousel-react": "^8.6.0",
+        "express": "^5.1.0",
         "framer-motion": "^12.7.4",
         "input-otp": "^1.4.2",
         "lucide-react": "^0.487.0",
@@ -73,6 +80,7 @@
         "sonner": "^2.0.3",
         "tailwind-merge": "^3.2.0",
         "tailwindcss-animate": "^1.0.7",
+        "tsx": "^4.19.4",
         "tw-animate-css": "^1.2.5",
         "use-debounce": "^10.0.4",
         "uuid": "^11.1.0",
@@ -87,11 +95,11 @@
         "@types/pg": "^8.11.11",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "concurrently": "^9.1.2",
         "drizzle-kit": "^0.30.6",
         "eslint": "^9",
         "eslint-config-next": "15.3.0",
         "tailwindcss": "^4.1.3",
-        "tsx": "^4.19.3",
         "typescript": "^5"
     }
 }
