--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "express": "^5.1.0",
         "framer-motion": "^12.7.4",
         "input-otp": "^1.4.2",
+        "ioredis": "^5.6.1",
         "lucide-react": "^0.487.0",
         "next": "15.3.0",
         "next-themes": "^0.4.6",
