Refactor workout planning components and hooks for improved clarity and performance
- Simplified `useWorkoutPlanData` hook by removing unnecessary dependencies and auto-save functionality.
- Updated `WorkoutPlanner` component to streamline state management and remove unused variables.
- Introduced manual queue initialization scripts and improved queue worker and scheduler management.
- Added comprehensive queue status checker for better debugging and monitoring.
- Removed legacy auto-save and background sync features to simplify the workflow.
- Enhanced logging for queue operations and Redis connection details.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "drizzle:migrate": "drizzle-kit migrate",
         "drizzle:drop": "drizzle-kit drop",
         "worker": "tsx scripts/start-worker.ts",
+        "init-queue": "tsx scripts/init-queue.ts",
         "monitor": "node scripts/monitoring-server.mjs",
         "dev:full": "concurrently \"npm run dev\" \"npm run worker\" \"npm run monitor\""
     },
