--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "dev": "next dev --turbopack",
-        "build": "next build --turbopack",
+        "build": "next build",
         "start": "next start",
         "lint": "next lint",
         "drizzle:generate": "drizzle-kit generate",
@@ -92,6 +92,7 @@
     "devDependencies": {
         "@eslint/eslintrc": "^3",
         "@tailwindcss/postcss": "^4.1.3",
+        "@types/express": "^5.0.3",
         "@types/lodash": "^4.17.16",
         "@types/node": "^20",
         "@types/pg": "^8.11.11",
